--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index",
+    "dev": "nodemon index"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/mykola1982/goit-node-js-hw-01.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Mykola Zaikovskyi",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/mykola1982/goit-node-js-hw-01/issues"
@@ -19,5 +21,9 @@
   "homepage": "https://github.com/mykola1982/goit-node-js-hw-01#readme",
   "devDependencies": {
     "nodemon": "^2.0.20"
+  },
+  "dependencies": {
+    "commander": "^10.0.0",
+    "nanoid": "^3.3.4"
   }
 }
